Review fixes: - fixed shadows being cut off on the sides - fixed scroll bar adding space below the photo thumbnails - fixed index of zero throwing an error in the carousel - fixed repeating background and spacing in the thumbnails - added a missing description message - removed extra html in template from copy and pasting and not cleaning it up

--- a/styles/components/_modal.scss
+++ b/styles/components/_modal.scss
@@ -41,6 +41,7 @@
       margin-bottom: $padGi;
       padding: 0;
       width: $modalContentInner;
+      overflow: visible;
       left: 0;
       transform: none;
       // adjust by 20 px to visually center
